Report support for the flac codec in ogg containers.

Per official documentation this is a supported combination:
https://wiki.xiph.org/Ogg#Codecs

BUG=689569
TEST=updated canPlayType tests.

Review-Url: https://codereview.chromium.org/2681683004
Cr-Commit-Position: refs/heads/master@{#449816}

Former-commit-id: 7f7dca6bddebc85000891307c03d6e3af106646b